--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,18 @@
             <artifactId>hutool-all</artifactId>
             <version>5.5.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.27</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.9</version>
+        </dependency>
         <!-- LOGGING end -->
     </dependencies>
 </project>
