--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,9 @@
         <dependency>
             <groupId>ognl</groupId>
             <artifactId>ognl</artifactId>
-            <version>3.3.2</version>
+            <version>3.0.8</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
         <dependency>
